Children overflowing mainContent area bug fixed.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,42 +19,32 @@ h1 {
   }
 
   .leftPanel {
-    min-height: 0;
+    flex: .8;
+    min-width: 0;
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    padding: 2%;
   }
 
   .middleContent {
-    min-height: 0;
+    flex: 1.4; 
+    min-width: 0;
   }
 
   .rightPanel {
-    min-height: 0;
-  }
-
-  .leftPanel {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 100%;
-    gap: 1rem;
-    padding: 2%;
-  }
-
-  .rightPanel {
+    flex: .8;
+    min-width: 0;
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 100%;
     gap: 1rem;
     padding: 2%;
   }
 
-  .leftPanel>* {
+  .leftPanel > * {
     flex: 1;
-
     height: 100%;
-
     min-width: 0;
-
   }
 }
 
